--- a/job portal.html
+++ b/job portal.html
@@ -5,14 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Frontpage</title>
     <link rel="stylesheet" href="css.css">
 </head>
-<style>
-    button :active{
-        background-color: blue;
-    }
-</style>
+
 
 <body id="body">
     <header>
